--- a/Report.html
+++ b/Report.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>Rotaract Club | Report</title>
 
+        <link rel="shortcut icon" href="./img/ppt logo2.webp">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +23,7 @@
                 <audio id="audio" style="z-index: 0;">
                     <source src="https://css-tricks.com/examples/SoundOnHover/audio/beep.ogg"/>
                 </audio>
-                <a class="navbar-brand" href="#"><img src="./img/ppt logo.png" height="60" width="60"></a>
+                <a class="navbar-brand" href="#"><img src="./img/ppt logo.webp" height="60" width="60"></a>
                 <div class="collapse navbar-collapse" id="Navbar">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
