--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                         </dl>
                                         <div class="row justify-content-center">
                                             <button class="reg-btn1 col-10 col-sm-4 btn btn-primary"><span>Register</span></button>
-                                        </div><br>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="card">
@@ -101,7 +101,7 @@
                                             <dt class="col-3 offset-1">Event</dt>
                                             <dd class="col-7">Name</dd>
                                             <dt class="col-3 offset-1">Date</dt>
-                                            <dd class="col-7">3 Feb 2013.</dd>
+                                            <dd class="col-7">To be announced</dd>
                                             <dt class="col-3 offset-1">Details</dt>
                                             <dd class="col-7">The details of the event will be uploaded soon once the event is announced to be conducted officially by the club members</dd>
                                         </dl>
@@ -122,7 +122,7 @@
                                             <dt class="col-3 offset-1">Event</dt>
                                             <dd class="col-7">Name</dd>
                                             <dt class="col-3 offset-1">Date</dt>
-                                            <dd class="col-7">3 Feb 2013.</dd>
+                                            <dd class="col-7">To be announced</dd>
                                             <dt class="col-3 offset-1">Details</dt>
                                             <dd class="col-7">The details of the event will be uploaded soon once the event is announced to be conducted officially by the club members</dd>
                                         </dl>
@@ -138,7 +138,7 @@
                                             <dt class="col-3 offset-1">Event</dt>
                                             <dd class="col-7">Name</dd>
                                             <dt class="col-3 offset-1">Date</dt>
-                                            <dd class="col-7">3 Feb 2013.</dd>
+                                            <dd class="col-7">To be announced</dd>
                                             <dt class="col-3 offset-1">Details</dt>
                                             <dd class="col-7">The details of the event will be uploaded soon once the event is announced to be conducted officially by the club members</dd>
                                         </dl>
